--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -42,6 +42,7 @@
       background: rgba(0,0,0,0.5);
       z-index: 4;
       will-change: opacity;
+      will-change: width;
     }
     &.--change{
       opacity: 1;
@@ -55,7 +56,7 @@
       position: absolute;
       text-align: center;
       transform: translateX(-100%);
-      transition: transform 0.7s 0.4s;
+      transition: transform 0.7s 0.2s;
       top:0;
       height: 100%;
       width: 35vw;
